log/build_2023-03-08_16-36-57/mypkg/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/nakane/ros2_s/src/mypkg/install/mypkg/lib/python3.10/site-packages/mypkg/listener.py", line 1
    1 import rclpy
      ^^^^^^
SyntaxError: invalid syntax

